--- a/app/views/layouts/_ae_tree_select.html.haml
+++ b/app/views/layouts/_ae_tree_select.html.haml
@@ -21,7 +21,7 @@
 
       .modal-body
         #automate_treebox
-        = render(:partial => "layouts/dynatree",
+        = render(:partial => "layouts/tree",
                  :locals => {:tree_id             => "automate_treebox",
                              :tree_name           => "automate_tree",
                              :bs_tree             => @automate_tree,
