--- a/app/views/layouts/listnav/_timeline.html.haml
+++ b/app/views/layouts/listnav/_timeline.html.haml
@@ -5,7 +5,7 @@
         @panels["timelines_#{rg_idx}"].nil? || @panels["timelines_#{rg_idx}"] == false, "timelines_#{rg_idx}") do
         - tree_id = "timeline_treebox#{rg_idx}"
         %div{:id => tree_id}
-        = render(:partial => "layouts/dynatree",
+        = render(:partial => "layouts/tree",
           :locals         => {:tree_id => tree_id,
             :tree_name                 => "#{tree_id}_#{rg_idx}",
             :bs_tree                   => @rep_tree[@report_groups[rg_idx]],
