--- a/app/views/ops/_rbac_group_details.html.haml
+++ b/app/views/ops/_rbac_group_details.html.haml
@@ -181,7 +181,7 @@
         %br/
         %br/
         #myco_treebox{:style => "color:#000"}
-        = render(:partial => "layouts/dynatree",
+        = render(:partial => "layouts/tree",
                  :locals  => {:tree_id           => "myco_treebox",
                               :tree_name         => "myco_tree",
                               :bs_tree           => @myco_tree,
@@ -195,7 +195,7 @@
         %br/
         %br/
         #hac_treebox{:style => "color:#000"}
-        = render(:partial => "layouts/dynatree",
+        = render(:partial => "layouts/tree",
                  :locals  => {:tree_id           => "hac_treebox",
                               :tree_name         => "hac_tree",
                               :bs_tree           => @hac_tree,
@@ -209,7 +209,7 @@
         %br/
         %br/
         #vat_treebox{:style => "color:#000"}
-        = render(:partial => "layouts/dynatree",
+        = render(:partial => "layouts/tree",
                  :locals  => {:tree_id           => "vat_treebox",
                               :tree_name         => "vat_tree",
                               :bs_tree           => @vat_tree,
