--- a/app/views/vm_common/_vmtree.html.haml
+++ b/app/views/vm_common/_vmtree.html.haml
@@ -5,7 +5,7 @@
   %p
 
   #genealogy_treebox{:style => "width:100%"}
-  = render(:partial => "layouts/dynatree",
+  = render(:partial => "layouts/tree",
     :locals         => {:tree_id => "genealogy_treebox",
       :tree_name                 => @tree_name,
       :bs_tree                   => @vm_tree,
