--- a/app/views/miq_policy/_action_options.html.haml
+++ b/app/views/miq_policy/_action_options.html.haml
@@ -68,7 +68,7 @@
       .form-group
         .col-md-8
           #action_tags_treebox
-          = render(:partial => "layouts/dynatree",
+          = render(:partial => "layouts/tree",
             :locals         => {:tree_id   => "action_tags_treebox",
               :tree_name                   => "action_tags_tree",
               :bs_tree                     => @cat_tree,
