--- a/app/views/ops/_rbac_role_details.html.haml
+++ b/app/views/ops/_rbac_role_details.html.haml
@@ -61,7 +61,7 @@
         = _("Product Features (Read Only)")
       %h3
       #features_treebox{:style => "width:100%;height:100%;color:#000"}
-      = render(:partial => "layouts/dynatree",
+      = render(:partial => "layouts/tree",
                :locals  => {:tree_id        => "features_treebox",
                             :tree_name      => "features_tree",
                             :bs_tree        => @features_tree,
