--- a/app/views/report/_role_list.html.haml
+++ b/app/views/report/_role_list.html.haml
@@ -6,7 +6,7 @@
         %h3
           = _("Reports")
         #menu_roles_treebox{:style => "overflow-y: hidden !important;"}
-      = render(:partial => "layouts/dynatree",
+      = render(:partial => "layouts/tree",
         :locals         => {:tree_id => 'menu_roles_treebox',
           :tree_name                 => 'menu_roles_tree',
           :bs_tree                   => @menu_roles_tree,
