--- a/app/views/shared/_tree.html.haml
+++ b/app/views/shared/_tree.html.haml
@@ -1,3 +1,3 @@
 %div{:id => "#{name}_div"}
   %div{:id => "#{name}box", :style => "overflow: hidden"}
-    = render :partial  => "layouts/dynatree", :locals => tree.locals_for_render
+    = render :partial  => "layouts/tree", :locals => tree.locals_for_render
