--- a/app/views/ops/_ldap_region_show.html.haml
+++ b/app/views/ops/_ldap_region_show.html.haml
@@ -34,7 +34,7 @@
         %th= _("User Suffix")
       %tbody
         - @selected_lr.ldap_domains.sort_by { |d| d.name.to_s }.each do |domain|
-          %tr{:onclick => "miqDynatreeActivateNode('settings_tree', 'ld-#{to_cid(domain.id)}');", :title => _("Click to view details")}
+          %tr{:onclick => "miqTreeActivateNode('settings_tree', 'ld-#{to_cid(domain.id)}');", :title => _("Click to view details")}
             %td.narrow
               %img{:src => image_path('100/ldap_domain.png')}
             %td
