--- a/app/views/ops/_rbac_details_tab.html.haml
+++ b/app/views/ops/_rbac_details_tab.html.haml
@@ -23,33 +23,33 @@
       %tbody
         - if role_allows?(:feature => "rbac_user_view", :any => true)
           %tr
-            %td.narrow{:onclick => "miqDynatreeActivateNode('rbac_tree', 'xx-u');", :title => _("View Users")}
+            %td.narrow{:onclick => "miqTreeActivateNode('rbac_tree', 'xx-u');", :title => _("View Users")}
               %ul.icons.list-unstyled
                 %li
                   %span.pficon.pficon-user
-            %td{:onclick => "miqDynatreeActivateNode('rbac_tree', 'xx-u');", :title => _("View Users")}
+            %td{:onclick => "miqTreeActivateNode('rbac_tree', 'xx-u');", :title => _("View Users")}
               = _("Users (%{users_count})") % {:users_count => @users_count.to_s}
         - if role_allows?(:feature => "rbac_group_view", :any => true)
           %tr
-            %td.narrow{:onclick => "miqDynatreeActivateNode('rbac_tree', 'xx-g');", :title => _("View Groups")}
+            %td.narrow{:onclick => "miqTreeActivateNode('rbac_tree', 'xx-g');", :title => _("View Groups")}
               %ul.icons.list-unstyled
                 %li
                   %span.product.product-group
-            %td{:onclick => "miqDynatreeActivateNode('rbac_tree', 'xx-g');", :title => _("View Groups")}
+            %td{:onclick => "miqTreeActivateNode('rbac_tree', 'xx-g');", :title => _("View Groups")}
               = _("Groups (%{groups_count})") % {:groups_count => @groups_count.to_s}
         - if role_allows?(:feature => "rbac_role_view", :any => true)
           %tr
-            %td.narrow{:onclick => "miqDynatreeActivateNode('rbac_tree', 'xx-ur');", :title => _("View Roles")}
+            %td.narrow{:onclick => "miqTreeActivateNode('rbac_tree', 'xx-ur');", :title => _("View Roles")}
               %ul.icons.list-unstyled
                 %li
                   %span.product.product-role
-            %td{:onclick => "miqDynatreeActivateNode('rbac_tree', 'xx-ur');", :title => _("View Roles")}
+            %td{:onclick => "miqTreeActivateNode('rbac_tree', 'xx-ur');", :title => _("View Roles")}
               = _("Roles (%{roles_count})") % {:roles_count => @roles_count.to_s}
         - if role_allows?(:feature => "rbac_tenant_view", :any => true)
           %tr
-            %td.narrow{:onclick => "miqDynatreeActivateNode('rbac_tree', 'xx-tn');", :title => _("View Tenants")}
+            %td.narrow{:onclick => "miqTreeActivateNode('rbac_tree', 'xx-tn');", :title => _("View Tenants")}
               %ul.icons.list-unstyled
                 %li
                   %span.product.product-tenant
-            %td{:onclick => "miqDynatreeActivateNode('rbac_tree', 'xx-tn');", :title => _("View Tenants")}
+            %td{:onclick => "miqTreeActivateNode('rbac_tree', 'xx-tn');", :title => _("View Tenants")}
               = _("Tenants (%{tenants_count})") % {:tenants_count => @tenants_count.to_s}
