--- a/app/views/ops/_rbac_user_details.html.haml
+++ b/app/views/ops/_rbac_user_details.html.haml
@@ -97,7 +97,7 @@
           - params = {}
           - if @user.current_group
             - if role_allows?(:feature => "rbac_group_show")
-              - params = {:class => "pointer", :onclick => "miqDynatreeActivateNode('rbac_tree', 'g-#{to_cid(@user.current_group.id)}');", :title => _("View this Group")}
+              - params = {:class => "pointer", :onclick => "miqTreeActivateNode('rbac_tree', 'g-#{to_cid(@user.current_group.id)}');", :title => _("View this Group")}
             %i.product.product-group{params}
             = h(@user.current_group.description)
         - else
@@ -119,7 +119,7 @@
         .col-md-8
           - if @user.current_group && @user.current_group.miq_user_role
             - if role_allows?(:feature => "rbac_user_show")
-              - params = {:class => "pointer", :onclick => "miqDynatreeActivateNode('rbac_tree', 'ur-#{to_cid(@user.current_group.miq_user_role.id)}');", :title => _("View this Role")}
+              - params = {:class => "pointer", :onclick => "miqTreeActivateNode('rbac_tree', 'ur-#{to_cid(@user.current_group.miq_user_role.id)}');", :title => _("View this Role")}
             - else
               - params = {}
             %i.product.product-role{params}
