--- a/app/views/ops/_settings_details_tab.html.haml
+++ b/app/views/ops/_settings_details_tab.html.haml
@@ -35,27 +35,27 @@
               = h(region.description)
               [#{h(region.region)}]
         %tr
-          %td.narrow{:onclick => "miqDynatreeActivateNode('settings_tree', 'xx-sis');", :title => _("View Analysis Profiles")}
+          %td.narrow{:onclick => "miqTreeActivateNode('settings_tree', 'xx-sis');", :title => _("View Analysis Profiles")}
             %img{:src => image_path('100/scan_item_set.png')}>/
-          %td{:onclick => "miqDynatreeActivateNode('settings_tree', 'xx-sis');", :title => _("View Analysis Profiles")}
+          %td{:onclick => "miqTreeActivateNode('settings_tree', 'xx-sis');", :title => _("View Analysis Profiles")}
             = _("Analysis Profiles")
             (#{h(@scan_items.size)})
         %tr
-          %td.narrow{:onclick => "miqDynatreeActivateNode('settings_tree', 'xx-z');", :title => _("View Zones")}
+          %td.narrow{:onclick => "miqTreeActivateNode('settings_tree', 'xx-z');", :title => _("View Zones")}
             %img{:src => image_path('100/zone.png')}>/
-          %td{:onclick => "miqDynatreeActivateNode('settings_tree', 'xx-z');", :title => _("View Zones")}
+          %td{:onclick => "miqTreeActivateNode('settings_tree', 'xx-z');", :title => _("View Zones")}
             = _("Zones")
             (#{h(@zones.size)})
         %tr
-          %td.narrow{:onclick => "miqDynatreeActivateNode('settings_tree', 'xx-msc');", :title => _("View Schedules")}
+          %td.narrow{:onclick => "miqTreeActivateNode('settings_tree', 'xx-msc');", :title => _("View Schedules")}
             %img{:src => image_path('100/miq_schedule.png')}>/
-          %td{:onclick => "miqDynatreeActivateNode('settings_tree', 'xx-msc');", :title => _("View Schedules")}
+          %td{:onclick => "miqTreeActivateNode('settings_tree', 'xx-msc');", :title => _("View Schedules")}
             = _("Schedules")
             (#{h(@miq_schedules.size)})
         - if get_vmdb_config[:product][:new_ldap]
           %tr
-            %td.narrow{:onclick => "miqDynatreeActivateNode('settings_tree', 'xx-l');", :title => _("View LDAP Regions")}
+            %td.narrow{:onclick => "miqTreeActivateNode('settings_tree', 'xx-l');", :title => _("View LDAP Regions")}
               %img{:src => image_path('100/ldap_region.png')}>/
-            %td{:onclick => "miqDynatreeActivateNode('settings_tree', 'xx-l');", :title => _("View LDAP Regions")}
+            %td{:onclick => "miqTreeActivateNode('settings_tree', 'xx-l');", :title => _("View LDAP Regions")}
               = _("LDAP Regions")
               (#{h(@ldap_regions.size)})
