--- a/app/views/miq_ae_customization/_old_dialogs_folders.html.haml
+++ b/app/views/miq_ae_customization/_old_dialogs_folders.html.haml
@@ -4,7 +4,7 @@
     %tbody
       - @folders.each do |f|
         %tr{:title => (_("View %{name} Folder") % {:name => f[0]}),
-          :onclick => "miqDynatreeActivateNode('old_dialogs_tree', 'xx-MiqDialog_#{f[1]}');"}
+          :onclick => "miqTreeActivateNode('old_dialogs_tree', 'xx-MiqDialog_#{f[1]}');"}
           %td.narrow
             %img{:src => image_path('100/folder.png')}
           %td
