--- a/app/views/miq_policy/_alert_profile_details.html.haml
+++ b/app/views/miq_policy/_alert_profile_details.html.haml
@@ -33,7 +33,7 @@
             %tbody
               - @alert_profile_alerts.each do |a|
                 %tr{:title => _("View this Alert"),
-                  :onclick => "miqDynatreeActivateNode('#{x_active_tree}', '#{x_node}_al-#{to_cid(a.id)}');"}
+                  :onclick => "miqTreeActivateNode('#{x_active_tree}', '#{x_node}_al-#{to_cid(a.id)}');"}
                   %td.narrow
                     %img{:src => image_path('100/miq_alert.png')}
                   %td
