--- a/app/views/miq_policy/_condition_list.html.haml
+++ b/app/views/miq_policy/_condition_list.html.haml
@@ -13,7 +13,7 @@
         %tbody
           - @conditions.each do |c|
             %tr{:title => _("View this Condition"),
-              :onclick => "miqDynatreeActivateNode('condition_tree', 'xx-#{c.towhat.downcase}_co-#{to_cid(c.id)}');"}
+              :onclick => "miqTreeActivateNode('condition_tree', 'xx-#{c.towhat.downcase}_co-#{to_cid(c.id)}');"}
               %td.narrow
                 %ul.icons.list-unstyled
                   %li
