--- a/app/views/miq_policy/_event_details.html.haml
+++ b/app/views/miq_policy/_event_details.html.haml
@@ -145,7 +145,7 @@
                 - @event_true_actions.each do |a|
                   - id = "a-#{to_cid(a.id)}"
                   - t = remote_function(:url => "/miq_policy/x_show/#{id}?accord=action")
-                  - f = "miqDynatreeActivateNode('#{x_active_tree}', '#{x_node}_#{id}');"
+                  - f = "miqTreeActivateNode('#{x_active_tree}', '#{x_node}_#{id}');"
                   %tr{:title => _("View this Event Action"),
                     :onclick => (x_active_tree == :action_tree) ? t : f}
                     %td.narrow
@@ -268,7 +268,7 @@
                 - @event_false_actions.each do |a|
                   - id = "a-#{to_cid(a.id)}"
                   - t = remote_function(:url => "/miq_policy/x_show/#{id}?accord=action")
-                  - f = "miqDynatreeActivateNode('#{x_active_tree}', '#{x_node}_#{id}');"
+                  - f = "miqTreeActivateNode('#{x_active_tree}', '#{x_node}_#{id}');"
                   %tr{:title => _("View this Event Action"),
                      :onclick => (x_active_tree == :action_tree) ? t : f}
                     %td.narrow
