--- a/app/views/miq_policy/_policy_details.html.haml
+++ b/app/views/miq_policy/_policy_details.html.haml
@@ -128,7 +128,7 @@
             %tbody
               - @policy_conditions.each do |c|
                 %tr{:title => _("View this Condition"),
-                  :onclick => "miqDynatreeActivateNode('#{x_active_tree}', '#{x_node}_co-#{to_cid(c.id)}');"}
+                  :onclick => "miqTreeActivateNode('#{x_active_tree}', '#{x_node}_co-#{to_cid(c.id)}');"}
                   %td.narrow
                     %ul.icons.list-unstyled
                       %li
@@ -177,10 +177,10 @@
               - @policy_events.each do |e|
                 %tr
                   %td.narrow{:title => _("View this Policy Event"),
-                    :onclick => "miqDynatreeActivateNode('#{x_active_tree}', '#{x_node}_ev-#{to_cid(e.id)}');"}
+                    :onclick => "miqTreeActivateNode('#{x_active_tree}', '#{x_node}_ev-#{to_cid(e.id)}');"}
                     %img{:src => image_path("100/event-#{e.name}.png")}
                   %td{:title => _("View this Policy Event"),
-                    :onclick => "miqDynatreeActivateNode('#{x_active_tree}', '#{x_node}_ev-#{to_cid(e.id)}');"}
+                    :onclick => "miqTreeActivateNode('#{x_active_tree}', '#{x_node}_ev-#{to_cid(e.id)}');"}
                     = h(e.description)
                   %td
                     - ta = @policy.actions_for_event(e, :success)
@@ -193,7 +193,7 @@
                           %tbody
                             - ta.each do |a|
                               %tr{:title => _("View this Event Action"),
-                                :onclick => "miqDynatreeActivateNode('#{x_active_tree}', '#{x_node}_ev-#{to_cid(e.id)}_a-#{to_cid(a.id)}');"}
+                                :onclick => "miqTreeActivateNode('#{x_active_tree}', '#{x_node}_ev-#{to_cid(e.id)}_a-#{to_cid(a.id)}');"}
                                 %td
                                   %span.pficon.pficon-ok
                                   = h(a.description)
@@ -202,7 +202,7 @@
                           %tbody
                             - fa.each do |a|
                               %tr{:title => _("View this Event Action"),
-                                  :onclick => "miqDynatreeActivateNode('#{x_active_tree}', '#{x_node}_ev-#{to_cid(e.id)}_a-#{to_cid(a.id)}');"}
+                                  :onclick => "miqTreeActivateNode('#{x_active_tree}', '#{x_node}_ev-#{to_cid(e.id)}_a-#{to_cid(a.id)}');"}
                                 %td
                                   %span.pficon.pficon-close
                                   = h(a.description)
