--- a/app/views/miq_policy/_profile_list.html.haml
+++ b/app/views/miq_policy/_profile_list.html.haml
@@ -12,7 +12,7 @@
         %tbody
           - @profiles.each do |pp|
             %tr{:title => _("View this Profile"),
-              :onclick => "miqDynatreeActivateNode('policy_profile_tree', 'pp-#{to_cid(pp.id)}');"}
+              :onclick => "miqTreeActivateNode('policy_profile_tree', 'pp-#{to_cid(pp.id)}');"}
               %td.narrow
                 %img{:src => image_path("100/policy_profile#{pp.active? ? '' : '_inactive'}.png")}
               %td
