--- a/app/views/miq_request/_prov_field.html.haml
+++ b/app/views/miq_request/_prov_field.html.haml
@@ -183,7 +183,7 @@
             :readonly => "readonly",
             :style    => "width: 600px; height: 250px;")
       - elsif [:ldap_ous].include?(field)
-        -# dynatree control for tags fields
+        -# tree control for tags fields
         .col-md-8
           %div{:id => "ldap_ous_treebox", :style => "color:#000; overflow: hidden;"}
           - if @edit && @edit[:req_id]
@@ -292,7 +292,7 @@
             -# Display notes if available
             = field_hash[:notes]
       - elsif [:tag_ids, :vm_tags].include?(field)
-        -# dynatree control for tags fields
+        -# tree control for tags fields
         .col-md-8
           %div{:id => "all_tags_treebox", :style => "color:#000; overflow: hidden;"}
           - if @edit && @edit[:req_id]
