--- a/app/views/ops/_diagnostics_zones_tab.html.haml
+++ b/app/views/ops/_diagnostics_zones_tab.html.haml
@@ -7,7 +7,7 @@
       %table.table.table-striped.table-bordered.table-hover
         %tbody
           - @zones.sort_by(&:name).each do |z|
-            %tr{:onclick => "miqDynatreeActivateNode('diagnostics_tree', 'z-#{to_cid(z.id)}')", :title => _("View this Zone")}
+            %tr{:onclick => "miqTreeActivateNode('diagnostics_tree', 'z-#{to_cid(z.id)}')", :title => _("View this Zone")}
               %td.narrow
                 %img{:src => image_path('100/zone.png')}/
               %td
