--- a/app/views/ops/_rbac_role_details.html.haml
+++ b/app/views/ops/_rbac_role_details.html.haml
@@ -47,7 +47,7 @@
               - @role.miq_groups.sort_by { |a| a.description.downcase }.each do |g|
                 - if role_allows?(:feature => "rbac_group_show")
                   - params = {:class   => "pointer",
-                              :onclick => "miqDynatreeActivateNode('rbac_tree', 'g-#{to_cid(g.id)}');",
+                              :onclick => "miqTreeActivateNode('rbac_tree', 'g-#{to_cid(g.id)}');",
                               :title   => _("View this Group")}
                 - else
                   - params = {}
