--- a/app/views/pxe/_template_folders.html.haml
+++ b/app/views/pxe/_template_folders.html.haml
@@ -4,13 +4,13 @@
     %table.table.table-bordered.table-striped.table-hover
       %tbody
         %tr{:title => _("View Examples (read only)' Folder"),
-          :onclick => "miqDynatreeActivateNode('customization_templates_tree', 'xx-xx-system');"}
+          :onclick => "miqTreeActivateNode('customization_templates_tree', 'xx-xx-system');"}
           %td.narrow
             %img{:src => image_path('100/folder.png')}
           %td Examples (read only)
         - @folders.each do |f|
           %tr{:title => _("View '%{name}' Folder") % {:name => f.name},
-            :onclick => "miqDynatreeActivateNode('customization_templates_tree', 'xx-xx-#{to_cid(f.id)}');"}
+            :onclick => "miqTreeActivateNode('customization_templates_tree', 'xx-xx-#{to_cid(f.id)}');"}
             %td.icon
               %img{:src => image_path('100/folder.png')}
             %td
