--- a/app/views/report/_db_list.html.haml
+++ b/app/views/report/_db_list.html.haml
@@ -10,7 +10,7 @@
       %tbody
         - @db_nodes_order.each do |node|
           %tr{:title => _("Click to view '%{title}'") % {:title => @db_nodes[node][:title]},
-            :onclick => "miqDynatreeActivateNode('#{@sb[:active_tree]}', '#{@db_nodes[node][:id]}');"}
+            :onclick => "miqTreeActivateNode('#{@sb[:active_tree]}', '#{@db_nodes[node][:id]}');"}
             %td.narrow{:nowrap => 1}
               %ul.icons.list-unstyled
                 %li
