--- a/app/views/layouts/_toast_list.html.haml
+++ b/app/views/layouts/_toast_list.html.haml
@@ -1,4 +1,4 @@
-%div{"id" => "toast-list-container", 'ng-controller' => "toastListController as vm"}
+#toast-list-container{'ng-controller' => "toastListController as vm"}
   %div{"pf-toast-notification-list" => "",
        "notifications" => "vm.toastNotifications",
        "show-close" => "true",
