Add Validation error message for GUID based Azure fields

--- a/app/views/layouts/angular-bootstrap/_auth_credentials_angular_bootstrap.html.haml
+++ b/app/views/layouts/angular-bootstrap/_auth_credentials_angular_bootstrap.html.haml
@@ -15,6 +15,7 @@
 - cancel_password_change ||= _("Cancel password change")
 - verify_title_off       ||= _("Server information, Username and matching password fields are needed to perform verification of credentials")
 - ng_show_userid         ||= true
+- guid_regex             ||= ""
 
 %div{"ng-controller" => "CredentialsController"}
   %div{"ng-show" => "#{ng_show} && #{ng_show_userid}"}
@@ -30,6 +31,7 @@
                             "ng-model"                => "#{ng_model}.#{prefix}_userid",
                             "checkchange"             => "",
                             "ng-trim"                 => false,
+                            "ng-pattern"              => guid_regex,
                             "detect_spaces"           => "",
                             "prefix"                  => "#{prefix}",
                             "reset-validation-status" => "#{prefix}_auth_status"}
@@ -37,6 +39,8 @@
           = _("Required")
         %span.help-block{"ng-show" => "angularForm.#{prefix}_userid.$error.detectedSpaces"}
           = _("Spaces are prohibited")
+        %span.help-block{"ng-show" => "angularForm.#{prefix}_userid.$error.pattern"}
+          = _("Invalid input format, please enter a GUID")
         .note
           {{note}}
 
