Removed miqDomElementExists function

--- a/app/views/layouts/_user_input_filter.html.haml
+++ b/app/views/layouts/_user_input_filter.html.haml
@@ -96,7 +96,7 @@
 :javascript
   $(function(){
     $('#quicksearchbox').on('shown.bs.modal', function () {
-      if (miqDomElementExists('value_1')) $('#value_1').focus();
+      if ($('#value_1').length) $('#value_1').focus();
     })
     $('#quicksearchbox').off("click");
     $('#quicksearchbox').on('click', '[data-dismiss="modal"]', function() {
