--- a/app/views/report/explorer.html.haml
+++ b/app/views/report/explorer.html.haml
@@ -14,7 +14,7 @@
   - else
     miqTreeForceActivateNode('#{x_active_tree}', '#{x_node}')
   };
-  var miq_after_onload = "miqReportAfterOnload();"
+  ManageIQ.afterOnload = "miqReportAfterOnload();"
 
 -# Create from/to date JS vars to limit calendar starting from
 :javascript
