--- a/app/views/container/explorer.html.haml
+++ b/app/views/container/explorer.html.haml
@@ -2,11 +2,11 @@
   - if @showtype == "timeline"
     = render(:partial => "layouts/tl_show")
     :javascript
-      var miq_after_onload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
+      ManageIQ.afterOnload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
   - elsif @showtype == "performance"
     = render(:partial => "layouts/performance")
     :javascript
-      var miq_after_onload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
+      ManageIQ.afterOnload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
   - elsif TreeBuilder.get_model_for_prefix(@nodetype) == "Container"
     -# Showing a specific Service
     = render :partial => "container_show", :locals => {:controller => "container"}
