--- a/app/views/container_group/show.html.haml
+++ b/app/views/container_group/show.html.haml
@@ -5,11 +5,11 @@
     - when "timeline"
         = render(:partial => "layouts/tl_show")
         :javascript
-            var miq_after_onload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
+            ManageIQ.afterOnload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
     - when "performance"
         = render(:partial => "layouts/performance")
         :javascript
-            var miq_after_onload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
+            ManageIQ.afterOnload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
     - when "compliance_history"
         = render :partial => "shared/views/#{@showtype}"
     - else
