--- a/app/views/container_replicator/show.html.haml
+++ b/app/views/container_replicator/show.html.haml
@@ -3,11 +3,11 @@
 - elsif @showtype == "timeline"
     = render(:partial => "layouts/tl_show")
     :javascript
-        var miq_after_onload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
+        ManageIQ.afterOnload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
 - elsif @showtype == "performance"
     = render(:partial => "layouts/performance")
     :javascript
-        var miq_after_onload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
+        ManageIQ.afterOnload = "miqAsyncAjax('#{url_for(:action => @ajax_action, :id => @record)}');"
 - elsif @showtype == "compliance_history"
     = render :partial => "shared/views/#{@showtype}"
 - else
