--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -43,4 +43,4 @@
 -# if set by controller, set up to run as JS after onload is done
 - if @miq_after_onload
   :javascript
-    var miq_after_onload = '#{j @miq_after_onload}';
+    ManageIQ.afterOnload = '#{j @miq_after_onload}';
