--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -23,3 +23,5 @@
 
     :javascript
       API.logout();
+      delete localStorage['patternfly-navigation-secondary'];
+      delete localStorage['patternfly-navigation-tertiary'];
