Fix Tenant quota's name attribute to use quota_name

--- a/app/views/ops/_tenant_quota_form.html.haml
+++ b/app/views/ops/_tenant_quota_form.html.haml
@@ -31,7 +31,7 @@
             %td
               %input.form-control{"type"        => "text",
                                   "id"          => "id_{{quota_name}}",
-                                  "name"        => "value",
+                                  "name"        => "id_{{quota_name}}",
                                   "ng-model"    => "quota_obj.value",
                                   "ng-required" => "quota_obj.enforced",
                                   "ng-disabled" => "!quota_obj.enforced",
