Use more specific jQuery selector in git click handlers
This also should fix the duplicate event issue for change events because
patternfly creates divs with the same class for select elements

--- a/app/views/miq_ae_class/_git_domain_refresh.html.haml
+++ b/app/views/miq_ae_class/_git_domain_refresh.html.haml
@@ -31,6 +31,6 @@
 
     Automate.setUpGitRefreshClickHandlers();
 
-    $('.git-branch-or-tag').val($('.git-branches').val());
+    $('.git-branch-or-tag').val($('select.git-branches').val());
     miqButtons('show');
   });
