--- a/app/views/ops/_all_tabs.html.haml
+++ b/app/views/ops/_all_tabs.html.haml
@@ -117,7 +117,7 @@
           = _("Collect Logs")
         - if @sb[:selected_server_id] == my_server_id
           = miq_tab_header("diagnostics_evm_log", @sb[:active_tab]) do
-            = _("CFME Log")
+            = _("ManageIQ Log")
           = miq_tab_header("diagnostics_audit_log", @sb[:active_tab]) do
             = _("Audit Log")
           = miq_tab_header("diagnostics_production_log", @sb[:active_tab]) do
