--- a/app/views/ops/rhn/_server_table.html.haml
+++ b/app/views/ops/rhn/_server_table.html.haml
@@ -33,7 +33,7 @@
                                                          :button => 'register')}',
                                               true);")
       %td
-        = button_tag(_("Apply CFME Update"),
+        = button_tag(_("Apply ManageIQ Update"),
                   :id       => 'rhn_update_button_on_1',
                   :class    => 'btn btn-default',
                   :disabled => !@buttons_on,
@@ -52,7 +52,7 @@
       %th= _("Zone")
       %th= _("Update Status")
       %th= _("Last Checked for updates")
-      %th= _("CFME Version")
+      %th= _("ManageIQ Version")
       %th= _("Platform Updates Available")
       %th= _("Last Message")
     %tbody
