Add spec for selecting default git branch when refreshing a git domain

--- a/app/views/miq_ae_class/_git_domain_refresh.html.haml
+++ b/app/views/miq_ae_class/_git_domain_refresh.html.haml
@@ -30,7 +30,7 @@
     miqInitSelectPicker();
 
     Automate.setUpGitRefreshClickHandlers();
+    Automate.setUpDefaultGitBranchOrTagValue();
 
-    $('.git-branch-or-tag').val($('select.git-branches').val());
     miqButtons('show');
   });
