--- a/app/views/ems_container/show_alerts.html.haml
+++ b/app/views/ems_container/show_alerts.html.haml
@@ -1,3 +1,11 @@
 .col-md-12.col-lg-12
   = render :partial => "shared/summary/textual_multilabel", :locals => {:title => _("Last 20 issues"), :items => textual_group_alerts}
+  = render :partial => "layouts/user_ack_form"
   = render :partial => "shared/summary/textual_multilabel", :locals => {:title => _("System Status"), :items => textual_group_alerts_summary}
+
+:javascript
+    $(document).ready( function() {
+      $(".actions_td").click(function(){
+        $("#user_ack_form").show();
+      })
+    } );
