Topology legend fix for IE 11
https://bugzilla.redhat.com/show_bug.cgi?id=1449404

--- a/app/assets/stylesheets/topology.css
+++ b/app/assets/stylesheets/topology.css
@@ -40,8 +40,7 @@ kubernetes-topology-icon svg {
   display: inline-block;
 }
 
-_:-ms-fullscreen, :root kubernetes-topology-icon svg,  /* IE11 hack */
-_:-ms-lang(x), _:-webkit-full-screen, kubernetes-topology-icon svg /* Edge hack */{
+_:-ms-fullscreen, :root svg.kube-topology {  /* Internet Explorer/Edge ≥ 11 */
   padding: 20px 0 0 20px;  
 }
 
